# celestial_biome

./: .env  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml
.github/workflows/: build.yml  ci.yml  deploy.yml
src/backend/: Dockerfile  Dockerfile.dev  manage.py  pyproject.toml
src/backend/astronomy/: apps.py  services.py  urls.py  views.py
src/backend/astronomy/management/commands/: ingest_space_weather.py
src/backend/config/: settings.py  urls.py
src/frontend/: Dockerfile  Dockerfile.dev  biome.json  next.config.ts  package-lock.json  package.json
src/frontend/app/: page.tsx
src/frontend/app/api/[...slug]/: route.ts
src/frontend/app/components/: SolarSystemMap.tsx  SpaceWeatherDashboard.tsx
